
= 1.5.9 - August 10, 2021 =

* Improved error reporting for api errors

= 1.6.0 - August 10, 2021 =

* Handle deprecated Webhooks for order's stuck in 'hold' status
* Update SDK to 3.0.1

= 1.7.0 - October 4, 2021 =

* Revert payment flow change done in v1.5.4

= 1.7.1 - November 22, 2021 =

* add german translations

= 1.7.1 - November 22, 2021 =

* adjust translation date

= 1.7.3 - January 25, 2022 =

* checkout loading fix

= 1.7.4 - February 08, 2022 =

* updated JS snippet
* tested against WP 5.9, WC 6.1.1

= 1.7.5 - February 28, 2022 =

* updated documentation

= 1.7.6 - March 1, 2022 =

* create new transaction when subscription is removed from cart to prevent issues with payment choice

= 1.7.7 - March 8, 2022 =

* test release for GitLab Ci/CD instegration

= 1.7.8 - March 10, 2022 =

* test release for GitLab Ci/CD instegration, no changes to code, just an empty release

= 1.7.9 - March 10, 2022 =

* test release for GitLab Ci/CD instegration, no changes to code, just an empty release

= 1.7.10 - March 22, 2022 =

* remove double slash from enqueue url

= 1.7.11 - April 11, 2022 =

* add payment method descriptions when address is empty

= 1.7.12 - May 02, 2022 =

* support link update in documentation

= 1.7.14 - May 11, 2022 =

* added order reference number to order info
* tested against Woocommerce 6.3.1, Wordpress 5.9.3

= 1.7.13 - May 09, 2022 =

* allow filter for jmerchant to select order id or order number
* tested against Woocommerce 6.3.1, Wordpress 5.9.3

= 1.7.15 - June 22, 2022 =

* enable translatepress support for line item translations into the portal
* tested against Woocommerce 6.3.1, Wordpress 6.0, Translatepress 2.2.9

= 1.7.15 - June 15, 2022 =

* fix for non whitelabelled reference

= 1.7.17 - June 27, 2022 =

* fix for upstream translation

improve links on readme

trademark requirements fix

multiple code improvements for security and best practices

Travis improvements

Adjust documentation (remove setup assistant)
