@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="https://github.com/pfpayments/woocommerce/releases/tag/1.7.22/">
+		<a href="https://github.com/pfpayments/woocommerce/releases/tag/1.7.23/">
 			Source
 		</a>
 	</li>
